# rag_llm

./: .gitignore  pyproject.toml
01-DataIngestionParsing/: 1-dataingestion.ipynb
01-DataIngestionParsing/data/text_files/: sample1.txt
notebooks/01-DataIngestionParsing/: 1-dataingestion.ipynb
notebooks/01-DataIngestionParsing/data/text_files/: sample2.txt
notebooks/data/text_files/: sample1.txt
